added nanopb submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libopeninv"]
 	path = libopeninv
 	url = https://github.com/jsphuebner/libopeninv.git
+[submodule "nanopb"]
+	path = nanopb
+	url = https://github.com/nanopb/nanopb.git
